@@ -13,6 +13,7 @@ lib/OpenGL/Modern/glew-context.c
 lib/OpenGL/Modern/glew.c
 lib/OpenGL/Modern/Helpers.pm
 lib/OpenGL/Modern/ImageHack.pm
+lib/OpenGL/Modern/Install/Files.pm
 lib/OpenGL/Modern/Install/typemap
 lib/OpenGL/Modern/ppport.h
 lib/OpenGL/Modern/Registry.pm
