@@ -1,3 +1,5 @@
+- add ExtUtils::Depends support in addition to ::Config, including `use Inline with => 'OpenGL::Modern'`
+
 0.0401 2025-05-03
 - document glpSetAutoCheckErrors (#44)
 - croak if auto-glewInit fails (#43 #36)
